tdf#130841 resize to client size after SetPosSize

This fixes the hack of the native menu bar with a smaller client
size in relation to the frame geometry.
Eventually this should be replaced by proper mnTopBorder usage,
but this currently isn't working.

Change-Id: Ib5825d9c8f77e463fcb086e0373228fe91d8705a